--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=ApiRestForo
-
 spring.datasource.url=jdbc:mysql://localhost/${DB_FORO_NAME}
 spring.datasource.username=${DB_FORO_USER}
 spring.datasource.password=${DB_FORO_PASS}
-
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 server.error.include-stacktrace=never
+api.security.secret=${DB_PASS}
